--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,9 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
 	implementation('org.springframework.boot:spring-boot-starter-mustache')
 	implementation('org.springframework.boot:spring-boot-starter-web')
+	compile('org.jsoup:jsoup:1.11.3')
 	compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.7.0'
+	compile('org.seleniumhq.selenium:selenium-java')
 	runtimeOnly('org.springframework.boot:spring-boot-devtools')
 	runtimeOnly('com.h2database:h2')
 	compileOnly('org.projectlombok:lombok')
