--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
 	implementation('org.springframework.boot:spring-boot-starter-mustache')
 	implementation('org.springframework.boot:spring-boot-starter-web')
+	compile('org.mariadb.jdbc:mariadb-java-client')
 	compile('org.jsoup:jsoup:1.11.3')
 	compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.7.0'
 	compile('org.seleniumhq.selenium:selenium-java')
