--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,12 +14,12 @@ spring:
   datasource:
     platform: mariadb  
     driver-class-name: org.mariadb.jdbc.Driver  
-    url: jdbc:mariadb://192.168.99.100:3306/with-kid  
+    url: jdbc:mariadb://192.168.99.100:3306/with-kid
     username: root  
     password: 1234  
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
