--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,21 @@ spring:
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
 ---
 spring:
+  profiles: production
+  datasource:
+    platform: mariadb  
+    driver-class-name: org.mariadb.jdbc.Driver  
+    url: jdbc:mariadb://withkid-rdb:3306/with-kid
+    username: root  
+    password: 1234  
+  jpa:
+    hibernate:
+      ddl-auto: none
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+---
+spring:
   profiles: test
   jpa:
     hibernate: 
