[fix] docker swarm에서 service name으로 db와 redis 연결해보기 위해 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,7 +29,7 @@ spring:
   datasource:
     platform: mariadb  
     driver-class-name: org.mariadb.jdbc.Driver  
-    url: jdbc:mariadb://withkid-rdb:3306/with-kid
+    url: jdbc:mariadb://withkid_rdb:3306/with-kid
     username: root  
     password: 1234  
   jpa:
