--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,17 @@
 spring:
   profiles:
-    active: production
+    active: local
   jpa:
     show-sql: true
     properties:
       hibernate.format_sql: true 
       use_sql_comments: true
+  social:
+    facebook:
+      app-id: 2246330218761993
+      app-secret: d934e29a113c5a5044cae12737fe3467
+      scope: public_profile, email, user_birthday
+      redirect-url: http://localhost:8082/facebook
 server:
   port: 8082
 ---
@@ -51,3 +57,7 @@ spring:
   output: 
      ansi: 
       enabled: always
+  social:
+    facebook:
+      app-id: 2246330218761993
+      app-secret: d934e29a113c5a5044cae12737fe3467
