[REFACTORING] 모바일에서 페이스북 로그인에서 window.open()을 사용하지 못하는 이슈로 기존 temporaryCode를 firestore에 저장하던 로직 제거하고 더 간소화된 방향으로 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
       app-id: 2246330218761993
       app-secret: d934e29a113c5a5044cae12737fe3467
       scope: public_profile, email, user_birthday
-      redirect-url: http://localhost:8082/facebookToken?temporaryCode=
+      redirect-url: http://localhost:8000/accessToken
   mustache:
     suffix: .html
 server:
