--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,11 @@
 spring:
   profiles:
-    active: local
+    active: production
   jpa:
     show-sql: true
     properties:
       hibernate.format_sql: true 
       use_sql_comments: true
-  social:
-    facebook:
-      app-id: 2246330218761993
-      app-secret: d934e29a113c5a5044cae12737fe3467
-      scope: public_profile, email, user_birthday
-      redirect-url: http://localhost:8000/accessToken
   mustache:
     suffix: .html
 server:
@@ -31,6 +25,12 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+  social:
+    facebook:
+      app-id: 2246330218761993
+      app-secret: d934e29a113c5a5044cae12737fe3467
+      scope: public_profile, email, user_birthday
+      redirect-url: http://localhost:8000/accessToken
 ---
 spring:
   profiles: production
@@ -46,6 +46,12 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+  social:
+    facebook:
+      app-id: 2246330218761993
+      app-secret: d934e29a113c5a5044cae12737fe3467
+      scope: public_profile, email, user_birthday
+      redirect-url: https://withkid.tk/accessToken
 ---
 spring:
   profiles: test
@@ -63,3 +69,5 @@ spring:
     facebook:
       app-id: 2246330218761993
       app-secret: d934e29a113c5a5044cae12737fe3467
+      scope: public_profile, email, user_birthday
+      redirect-url: http://localhost:8000/accessToken
